portrait code addition

--- a/topFives/topfive.html
+++ b/topFives/topfive.html
@@ -12,7 +12,7 @@
 
 	<ol>
 
-		<a href=”https://www.matchacafe-maiko.com/eng/">
+		<a href="https://www.matchacafe-maiko.com/eng/">
 			<li> Matcha Ice cream </li>
 			<img src="img/matcha.jpg" alt="matcha">
 		</a>
@@ -66,31 +66,31 @@
 
 	<dl>
 
-		<a href=”https://www.japan.travel/en/us/">
+		<a href="https://www.japan.travel/en/us/">
 			<dt> Japan</dt>
 			<img src="img/japan.jpg" alt="japan">
 		</a>
 		<dd> I have wanted to visit Japan since I was a child, and I love the culture. I also speak Japanese.</dd>
 
-		<a href=”https://english.visitkorea.or.kr/svc/main/index.do">
+		<a href="https://english.visitkorea.or.kr/svc/main/index.do">
 			<dt> South Korea</dt>
 			<img src="img/southkorea.jpg" alt="southkorea">
 		</a>
 		<dd>My good friends are both Korean and I became interested in seeing the country.</dd>
 
-		<a href=”https://philippines.travel/lovethephilippines">
+		<a href="https://philippines.travel/lovethephilippines">
 			<dt> Philippines</dt>
 			<img src="img/philippines.jpg" alt="philippines">
 		</a>
 		<dd>I was born here and I just want tto visit my family again.</dd>
 
-		<a href=”https://www.canada.ca/en/immigration-refugees-citizenship/services/visit-canada.html">
+		<a href="https://www.canada.ca/en/immigration-refugees-citizenship/services/visit-canada.html">
 			<dt> Canada</dt>
 			<img src="img/canada.jpg" alt="canada">
 		</a>
 		<dd>I've been to Canada before, but I wanted to venture out more.</dd>
 
-		<a href=”https://www.australia.com/en-us">
+		<a href="https://www.australia.com/en-us">
 			<dt> Australia</dt>
 			<img src="img/australia.jpg" alt="australia">
 		</a>
