--- a/inspiration/inspiration.html
+++ b/inspiration/inspiration.html
@@ -9,7 +9,7 @@
       <h1>Name: Trish Ann Payumo</h1>
 				<h2>These are three artisits who inspire me:</h2>
 
-					<a href=”https://kerbyrosanes.com/”><h3><em>Kerby Rosanes</em></h3>
+					<a href="https://kerbyrosanes.com"><h3><em>Kerby Rosanes</em></h3>
 						<img src="img/kerbyrosanes.jpg" alt="kerbyrosanes">
 					</a>
 
@@ -17,7 +17,7 @@
 								I have seen how their art progressed through the years, inspiring me to do the same.  
 								Most of my art or things I make are typically monochrome because of this.</h4>
 
-					<a href=”https://zipcy.myportfolio.com/touch-1”><h3><em>Zipcy</em></h3>
+					<a href="https://zipcy.myportfolio.com/touch-1"><h3><em>Zipcy</em></h3>
 						<img src="img/zipcy.jpg" alt="zipcy">
 					</a>
 
@@ -25,8 +25,8 @@
 								I love their art and see how they portray love and express it in such a beautiful manner. 
 								I do not draw people, but this inspires me to start even simple sketches because I want to portray the same sentiments. </h4>
 
-					<a href=”https://www.pixiv.net/en/users/648285”><h3><em>mocha@新刊委託中</em></h3>
-						<img src='img/mocha.jpg' alt="mocha">
+					<a href="https://www.pixiv.net/en/users/648285"><h3><em>mocha@新刊委託中</em></h3>
+						<img src="img/mocha.jpg" alt="mocha">
 					</a>
 
 						<h4>I have been following this artist recently, and I am a huge sucker for sceneries. 
