--- a/inspiration/inspiration.html
+++ b/inspiration/inspiration.html
@@ -6,6 +6,15 @@
     </head> 
 
     <body>
+
+			<header>                                                                                      <!-- // header -->  
+        <nav>
+          <a href="index.html">home</a> &nbsp;
+          <a href="inspiration/inspiration.html">my inspirations</a> &nbsp;                         <!-- // foldername/.html file to properly indicate where to find the referenced file -->
+          <a href="topFives/topfive.html">my top 5's</a>
+        </nav>
+      </header>
+			
       <h1>Name: Trish Ann Payumo</h1>
 				<h2>These are three artisits who inspire me:</h2>
 
