--- a/topFives/topfive.html
+++ b/topFives/topfive.html
@@ -7,6 +7,15 @@
 </head>
 
 <body>
+
+	<header>                                                                                      <!-- // header -->  
+		<nav>
+			<a href="index.html">home</a> &nbsp;
+			<a href="inspiration/inspiration.html">my inspirations</a> &nbsp;                         <!-- // foldername/.html file to properly indicate where to find the referenced file -->
+			<a href="topFives/topfive.html">my top 5's</a>
+		</nav>
+	</header>
+
 	<h1>My top 5's</h1>
 	<h2>top 5 favorite desserts </h2>
 
