navigation error fix

--- a/topFives/topfive.html
+++ b/topFives/topfive.html
@@ -10,9 +10,9 @@
 
 	<header>                                                                                      <!-- // header -->  
 		<nav>
-			<a href="index.html">home</a> &nbsp;
-			<a href="inspiration/inspiration.html">my inspirations</a> &nbsp;                         <!-- // foldername/.html file to properly indicate where to find the referenced file -->
-			<a href="topFives/topfive.html">my top 5's</a>
+			<a href="../index.html">home</a> &nbsp;
+			<a href="../inspiration/inspiration.html">my inspirations</a> &nbsp;                         <!-- // foldername/.html file to properly indicate where to find the referenced file -->
+			<a href="../topFives/topfive.html">my top 5's</a>
 		</nav>
 	</header>
 
